Java_class_Practicle/Practicle_10/Question_2.java~
//2.WAP to understand working of throws clause.


/*
	lenovo@LENOVO-PC:~/Java_Programming/Java_class_Practicle/Practicle_10$ javac Question_2.java 
	Question_2.java:9: error: unreported exception InterruptedException; must be caught or declared to be thrown
			Thread.sleep(100);
				    ^
	1 error

*/

class Question_2
{

	public static void main(String[] args )throws InterruptedException
	{
		Thread.sleep(100);
		// if any function causes checked exception then we have to report it using throws clause 
		// or we have to handle it our own using try catch block
	}
}

